# CBF-Bot

./: .gitignore  CBFIntegration.cpp  CBFIntegration.hpp  CMakeLists.txt  MacroBot.hpp  MacroLayer.cpp  MacroPlayer.cpp  MacroPlayer.hpp  MacroRecorder.cpp  MacroRecorder.hpp  PracticeFix.hpp  README.md  Speedhack.cpp  Speedhack.hpp  mod.json
.github/workflows/: build.yml
src/: Bot.hpp  CBFIntegration.cpp  CBFIntegration.hpp  MacroBot.cpp  MacroFormat.hpp  MacroPlayer.cpp  MacroRecorder.cpp  PracticeFix.cpp  Speedhack.cpp  Speedhack.hpp  main.cpp
src/UI/: MacroLayer.cpp  MacroLayer.hpp
